fix: Reduce letter spacing

--- a/components/Home/Description/description.module.scss
+++ b/components/Home/Description/description.module.scss
@@ -39,7 +39,7 @@
             h4 {
                 font-size: var(--small-text-size);
                 margin-bottom: 1rem;
-                letter-spacing: 4px;
+                // letter-spacing: 4px;
                 opacity: .5;
             }
 
